--- a/.github/workflows/feishu_bot.yml
+++ b/.github/workflows/feishu_bot.yml
@@ -19,14 +19,14 @@ on:
   project_card:
     types: [created]
   pull_request:
-    branches: ['master']
+    branches: ['main', 'master']
     types: [opened, reopened]
   pull_request_review_comment:
     types: [created]
   pull_request_target:
     types: [assigned, opened, synchronize, reopened]
   push:
-    branches: ['master']
+    branches: ['main', 'master']
 
 jobs:
   send-event:
